tests/NormalTests/paczka1/small_fuzzy/73382743.err
Error in line 11: S990 S180 47,7
Error in line 14: S990 S990 30,3
